# tcow

./: Cargo.toml  README.md  SKILL.md
docs/: CLI.md  TCOW.md
src/: lib.rs  main.rs
