[package]
name = "tcow"
version = "0.1.0"
edition = "2021"
description = "Copy-on-write virtual filesystem inspector and manager (.tcow files)"

[lib]
name = "tcow"
path = "src/lib.rs"

[[bin]]
name = "tcow"
path = "src/main.rs"

[dependencies]
anyhow    = "1"
clap      = { version = "4", features = ["derive", "env"] }
ciborium  = "0.2"
serde     = { version = "1", features = ["derive"] }
tar       = "0.4"
sha2      = "0.10"
hex       = "0.4"
chrono    = "0.4"
